--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -34,7 +34,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
+                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> name</span></a>
                       </dd>
                     </div>
 
@@ -46,7 +46,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> date of birth</span></a>
                       </dd>
                     </div>
                     <div class="govuk-summary-list__row">
@@ -57,7 +57,7 @@
                         02076315    <a href="#">(View Companies House record)</a>
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
+                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> address</span></a>
                       </dd>
                     </div>
                   </dl>
@@ -70,8 +70,8 @@
 
                         </dt>
                         <dd class="govuk-summary-list__actions">
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
+                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
                         </dd>
                       </div>
                     </dl>
@@ -91,8 +91,8 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
+                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
     </ul>
             </dd>
           </div>
