--- a/app/views/psd-revised-flow/add-business-to-notification/edit-business-details-bartholomew.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/edit-business-details-bartholomew.html
@@ -367,7 +367,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
     <label class="govuk-label" for="registered">Registered address</label>
       <div class="govuk-checkboxes" data-module="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="business-details-registered_1" name="business-details-registered" type="checkbox" value="yes" data-behaviour="exclusive" checked>
+          <input class="govuk-checkboxes__input" id="business-details-registered_1" name="business-details-registered" type="checkbox" value="option1" data-behaviour="exclusive" checked>
           <label class="govuk-label govuk-checkboxes__label" for="business-details-registered_1">
             This is the business's registered address
           </label>
@@ -379,7 +379,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="address_1">Address line 1</label>
-  <input class="govuk-input govuk-!-width-two-thirds" id="business-details-address_1_2" name="business-details-address_1_2" type="text" value="65 Commercial Road">
+  <input class="govuk-input govuk-!-width-two-thirds" id="business-details-address_1_2" name="business-details-address_1_2" type="text" value="8 Porters Wood Estate">
 </div>
 
 <div class="govuk-form-group">
@@ -389,7 +389,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="city">Town or city</label>
-  <input class="govuk-input govuk-!-width-two-thirds" id="business-details-city_2" name="business-details-city_2" type="text" value="Liverpool">
+  <input class="govuk-input govuk-!-width-two-thirds" id="business-details-city_2" name="business-details-city_2" type="text" value="Harlow">
 </div>
 
   <div class="govuk-form-group">
@@ -399,7 +399,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="postal_code">Postcode</label>
-  <input class="govuk-input govuk-!-width-one-quarter" id="business-details-postcode_2" name="business-details-postcode_2" type="text" value="L5 9XE">
+  <input class="govuk-input govuk-!-width-one-quarter" id="business-details-postcode_2" name="business-details-postcode_2" type="text" value="CM20 1EG">
 </div>
 
 <div class="govuk-form-group govuk-!-width-two-thirds">
@@ -692,7 +692,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
   <label class="govuk-label" for="registered">Registered address</label>
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="business-details-registered_2" name="business-details-registered" type="checkbox" value="yes" data-behaviour="exclusive">
+        <input class="govuk-checkboxes__input" id="business-details-registered_2" name="business-details-registered" type="checkbox" value="option2" data-behaviour="exclusive">
         <label class="govuk-label govuk-checkboxes__label" for="business-details-registered_2">
           This is the business's registered address
         </label>
