--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -70,6 +70,10 @@
         {% endfor %}
       
         {{ rolesString }} 
+
+        {% if data['business-details-registered'] %}
+<dd class="small-tag ">Registered address</dd>
+{% endif %}  
         
                         </dt>
                         <dd class="govuk-summary-list__actions">
@@ -95,7 +99,7 @@
               <p class="govuk-body">{{ data['business-details-phone'] }}</p>
               <p class="govuk-body">
                 {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
-                data['business-details-postcode'], data['business-details-country'], data['business-details-registered']] %}
+                data['business-details-postcode'], data['business-details-country']] %}
 
 {% set rolesString = "" %}
 {% for role in roles %}
