--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -45,19 +45,19 @@
 
 <section class="govuk-grid-column-full govuk-!-padding-0 govuk-!-margin-top-2" id="page-content">
 
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-three-quarters">
 <label class="govuk-label" for="case-search-term">
-    Enter company name, company number, or address
+    Enter trading name, Companies House number, or address
   </label>
-  <div class="govuk-input__wrapper opss-search__wrapper">
-    <input type="text" class="govuk-input" id="searchInput">
+  <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
+    <input type="text" class="govuk-input " id="searchInput">
     <button class="govuk-button govuk-!-margin-bottom-0" id="searchButton">
       <span class="govuk-visually-hidden">Submit search</span>
     </button>
   </div>
 </div>
 
-<div class="govuk-grid-column-one-half">
+<div class="govuk-grid-column-one-quarter">
   <div class="govuk-form-group opss-text-align-right">
 
       <label class="govuk-label" for="sort">
@@ -226,8 +226,8 @@
   {
     name: "Bartholomew Trading Ltd",
     companyNumber: "01727846",
-    address: "65 Commercial Road, Liverpool, L5 9XE, UK<hr class='govuk-section-break govuk-section-break--visible govuk-!-margin-bottom-2 govuk-!-margin-top-2'>8 Porters Wood Industrial Estate, Harlow, CM20 1EG, UK",
-    url: "business-bartholomew?business-details-trading_name={{ data['business-details-trading_name'] or 'Bartholomew Trading Ltd' }}&business-details-legal_name={{ data['business-details-legal_name'] or 'Bartholomew Trading Ltd' }}&business-details-ch_number={{ data['business-details-ch_number'] or '01727846' }}&business-details-address_1={{ data['business-details-address_1'] or '65 Commercial Road' }}&business-details-address_2={{ data['business-details-address_2'] or '' }}&business-details-city={{ data['business-details-city'] or 'Liverpool' }}&business-details-county={{ data['business-details-county'] or '' }}&business-details-postcode={{ data['business-details-postcode'] or 'L5 9XE' }}&business-details-country={{ data['business-details-country'] or 'United Kingdom' }}&business-details-address_1_2={{ data['business-details-address_1_2'] or '8 Porters Wood Industrial Estate' }}&business-details-address_2_2={{ data['business-details-address_2_2'] or '' }}&business-details-city_2={{ data['business-details-city_2'] or 'Harlow' }}&business-details-county_2={{ data['business-details-county_2'] or '' }}&business-details-postcode_2={{ data['business-details-postcode_2'] or 'CM20 1EG' }}&business-details-country_2={{ data['business-details-country_2'] or 'United Kingdom' }}&business-details-name={{ data['business-details-name'] or 'Peter Jacobson' }}&business-details-job_title={{ data['business-details-job_title'] or 'Chief Operations Officer' }}&business-details-email={{ data['business-details-email'] or 'peter.jacobson@batholomewtrading.co.uk' }}&business-details-phone={{ data['business-details-phone'] or '0151 232 7318' }}&business-details-location={{ data['business-details-location'] or '65 Commercial Road, Liverpool, L5 9XE, UK' }}"
+    address: "65 Commercial Road, Liverpool, L5 9XE, UK<hr class='govuk-section-break govuk-section-break--visible govuk-!-margin-bottom-2 govuk-!-margin-top-2'>8 Porters Wood Estate, Harlow, CM20 1EG, UK",
+    url: "business-bartholomew?business-details-trading_name={{ data['business-details-trading_name'] or 'Bartholomew Trading Ltd' }}&business-details-legal_name={{ data['business-details-legal_name'] or 'Bartholomew Trading Ltd' }}&business-details-ch_number={{ data['business-details-ch_number'] or '01727846' }}&business-details-address_1={{ data['business-details-address_1'] or '65 Commercial Road' }}&business-details-address_2={{ data['business-details-address_2'] or '' }}&business-details-city={{ data['business-details-city'] or 'Liverpool' }}&business-details-county={{ data['business-details-county'] or '' }}&business-details-postcode={{ data['business-details-postcode'] or 'L5 9XE' }}&business-details-country={{ data['business-details-country'] or 'United Kingdom' }}&business-details-address_1_2={{ data['business-details-address_1_2'] or '8 Valley Industrial Estate' }}&business-details-address_2_2={{ data['business-details-address_2_2'] or '' }}&business-details-city_2={{ data['business-details-city_2'] or 'Harlow' }}&business-details-county_2={{ data['business-details-county_2'] or '' }}&business-details-postcode_2={{ data['business-details-postcode_2'] or 'CM20 1EG' }}&business-details-country_2={{ data['business-details-country_2'] or 'United Kingdom' }}&business-details-name={{ data['business-details-name'] or 'Peter Jacobson' }}&business-details-job_title={{ data['business-details-job_title'] or 'Chief Operations Officer' }}&business-details-email={{ data['business-details-email'] or 'peter.jacobson@batholomewtrading.co.uk' }}&business-details-phone={{ data['business-details-phone'] or '0151 232 7318' }}&business-details-location={{ data['business-details-location'] or '65 Commercial Road, Liverpool, L5 9XE, UK' }}&business-details-registered={{ data['business-details-registered'] == 'option1' }}"
   },
   {
     name: "Baxter Solutions",
@@ -477,8 +477,6 @@
   </div>
 </nav>
 
-
-<input type="hidden" name="business-details-trading_name" value="{{ data['business-details-trading_name'] if data['business-details-trading_name'] else "Stu" }}" />
 
 
 {% endblock %}
