--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -883,14 +883,11 @@ ul#navigation.psd-header__navigation {
 
 .small-tag {
   display: inline-block;
-  background-color: #E5E6E7;
+  background-color: #e5e6e7;
   font-family: "GDS Transport", arial, sans-serif;
   color: #0b0c0c;
   font-size: 16px;
   font-weight: 400;
   padding: 2px 6px;
-  border-radius: 0px; 
-  letter-spacing: 0px;
   margin-left: 15px;
 }
-
