--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
@@ -150,6 +150,7 @@
         </fieldset>
       </div>
 
+    </div>
 
       <button class="govuk-button" data-module="govuk-button">
         Save and continue
