--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -47,7 +47,7 @@
 
   <div class="govuk-grid-column-three-quarters">
 <label class="govuk-label" for="case-search-term">
-    Enter trading name, Companies House number, or address
+    Enter trading name, Companies House number or address
   </label>
   <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
     <input type="text" class="govuk-input " id="searchInput">
