--- a/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
@@ -109,6 +109,8 @@
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">{{ data['business-details-email'] }}</p>
               <p class="govuk-body">{{ data['business-details-phone'] }}</p>
+              {% if data['business-details-name'] %}
+
               <p class="govuk-body">
                 {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
                 data['business-details-postcode'], data['business-details-country']] %}
@@ -128,6 +130,7 @@
 
 
       </p>
+      {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
