--- a/app/views/psd-revised-flow/add-business-to-notification/edit-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/edit-business-details.html
@@ -23,7 +23,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
     <form class="form govuk-!-margin-bottom-6" action="edit-business-details" method="post">
 
       <span class="govuk-caption-l">{{title}}</span>
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Enter the business details</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Edit business details</h1>
       <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Company details</legend>
 
@@ -78,7 +78,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 </div>
 
 <div class="govuk-form-group govuk-!-width-two-thirds">
-    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_country">Country</label>
+    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_country">Country (mandatory)</label>
         <select class="govuk-select" id="business-details-country" name="business-details-country">
         <option selected="selected" value="United Kingdom">United Kingdom</option>
         <option value="territory:AE-AZ">Abu Dhabi</option>
