--- a/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
@@ -81,7 +81,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 </div>
 
 <div class="govuk-form-group govuk-!-width-two-thirds">
-    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_country">Country</label>
+    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_country">Country (mandatory)</label>
         <select class="govuk-select" id="business-details-country" name="business-details-country">
           <option value=""></option>
           <option value="United Kingdom">United Kingdom</option>
