--- a/app/views/psd-revised-flow/add-business-to-notification/how-to-add-business.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/how-to-add-business.html
@@ -33,7 +33,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="companies-house" name="add-business" type="radio" value="companies-house">
         <label class="govuk-label govuk-radios__label" for="companies-house">
-          Use Companies House record to pre-fill the details
+          Use Companies House records to pre-fill the details
         </label>
       </div>
       <div class="govuk-radios__item">
