--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -47,7 +47,7 @@
 
   <div class="govuk-grid-column-three-quarters">
 <label class="govuk-label" for="case-search-term">
-    Enter trading name, Companies House number or address
+    Enter business name, Companies House number or address
   </label>
   <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
     <input type="text" class="govuk-input " id="searchInput">
@@ -78,7 +78,7 @@
 <table class="govuk-table govuk-!-margin-top-2" id="dataTable">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Trading name</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Business name</th>
       <th scope="col" class="govuk-table__header ">Companies House number</th>
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Address</th>
     </tr>
