--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -34,7 +34,7 @@
 
   <div class="govuk-grid-column-three-quarters">
     <label class="govuk-label" for="case-search-term">
-  Enter registered name, Companies House number or address
+  Enter registered name, Companies House number or registered address
   </label>
   <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
     <input type="text" class="govuk-input" id="searchInput">
@@ -63,10 +63,10 @@
 <table class="govuk-table govuk-!-margin-top-2" id="dataTable">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Company name</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Registered name</th>
       <th scope="col" class="govuk-table__header ">Status</th>
       <th scope="col" class="govuk-table__header ">Companies House number</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-half">Registered office address</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-half">Registered address</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
